# algorithms

./: .gitignore  README.md  a.py  b.py  c.py  main  main.py  pyproject.toml  temp.py  test_yandex.py  tiktok.py
OOP/: README.md
OOP/SOLID/: single_responsibility.py
OOP/concepts/: abstraction.py
OOP/inheritance/: composition.py  mixin.py  problem.py  prototype.py  test.py  traits.py
async/: events.py  futures.py  locks.py  semaphore.py  tasks.py
async/custom/: custom_async.py  yield_test.py
basics/: OOP.py  README.md  algorithms.py  cycles.py  functions.py  variables.py
concepts/: asynchron.py  gil_multiproc.py  gil_threading.py
helpers/: mock_data.py
leetcode/easy/: 100659_max_product_of_digits.py  1_two_sum.py
leetcode/medium/: 100626_fill_a_special_grid.py  22_generate_parentheses.py  3531_count_covered_buildings.py
math/statistics/: dispersion.py
misc/: air_quality_report.html  analysis_report.html  main.cpp  main.py  test.txt
multiproc/: test.py
my_math/statistics/: __init__.py  (+2 more)
search/: BFS.py  DFS.py  __init__.py  binary.py  exponential.py  interpolation.py  linear.py
sort/: __init__.py  bubble.py  heap.py  insertion.py  merge.py  merge_pairs.py  quick.py  selection.py
structures/: inverted_index.py  queue.py  stack.py  tree.py
test/: test_search.py  test_sort.py  test_structures.py
university/: Brute.py  algo.py  csa.py  heaps.py  mid_term.py  rbn_tree.py  temp.py
yandex_prep/: finding_word_by_pattern.py  line_reflection.py  longest_substring.py  string_compression.py  summary_ranges.py  valid_parentheses.py  zigzag.py
(+36 files in other folders)
