[tool.poetry]
name = "algorithms"
version = "0.1.0"
description = ""
authors = ["LANneeer <0penguin@mail.ru>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.10"
pytest = "^7.4.0"
aiohttp = "^3.8.4"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
